TBC - 0.39.0
- [NEW] - DXC - Added Full-text search
- [NEW] - Select S in RST Edit when focused (issue #454)
- [CHANGED] - HamlibDrv - Added multiplatform reliable sleep
- [CHANGED] - Changed Backup policy
- [CHANGED] - Logbook page size - improved performance
- [CHANGED] - Logbook - CTRL-A (Select All) is disabled
- [CHANGED] - Awards - Bands are displayed based on the Settings (issue #452)
- [CHANGED] - WSJTX - More reliable detection of CQ stations (PR #471 @aa5sh)
- [CHANGED] - WSJTX - SOTA/POTA/WWFF/SIG are being added to the logged QSO (PR #463 @aa5sh)
- [CHANGED] - Stats - Add a confirmation dialog for displaying over 50k QSOs on the map
- [CHANGED] - New Contact - Starting QSO Timer when Rig online and WSJTX Update Callsign Status is received
- Fixed WSJT-X does not emit band change if rig is disconnected (issue #447)
- Fixed Wrong import of ADIF file of another log program (issue #455)
- Fixed WSJTX log record is stored incorrectly if it contains non-ASCII chars(issue #458)
- Fixed ADIF import does not import records with old DXCC Entities (issue #459)
- Fixed ADIF import incorrectly uses Station Profile parameters (issue #461)
- Fixed Logbook - QSO Table Column Width Does Not Stick (issue #464)
- Fixed Field values from past QSOs are used incorrectly in case of WSJTX QSOs (#issue 470)

2024/08/29 - 0.38.0
- [NEW] - Logbook - Added Send DX Spot to the QSO Context Menu
- [NEW] - DX Filter - Added Dedup Time/Freq difference setting (@aa5sh)
- [NEW] - Rig Setting - Added RTS/DTR PTT Type support (issue #353)
- [NEW] - Bandmap - Scrollbar position is saved per band (issue #415)
- [NEW] - New Contact - Added a dynamic value completer for SIG field (issue #425)
- [NEW] - Awards - Added SOTA/POTA/WWFF (@aa5sh issue #311)
- [NEW] - Awards - Added Not-Worked Filter
- [NEW] - New Contact - Added Long Path Azimuth info
- [NEW] - POTA Fields allow a comma-delimited list of one or more POTA Refs
- [NEW] - WSJTX tunes freq/mode like Rig if rig is disconnected