@@ -1,6 +1,7 @@
 TBC - 0.39.0
 - [NEW] - DXC - Added Full-text search
 - [NEW] - Select S in RST Edit when focused (issue #454)
+- [NEW] - Alerts - Added Member Column
 - [CHANGED] - HamlibDrv - Added multiplatform reliable sleep
 - [CHANGED] - Changed Backup policy
 - [CHANGED] - Logbook page size - improved performance
